# one-third-hal-stm32

./: .clang-format  .gitignore  LICENSE  README.md  build-in-container  build-in-docker  build-on-mac-os.md
.github/workflows/: build-in-container.yml  build-in-docker.yml  clang-format-check.yml
001-f107vct6-sysclk-led/: Makefile
001-f107vct6-sysclk-led/inc/: config.h  crystal.h
001-f107vct6-sysclk-led/src/: main.c
002-f107vct6-stime/: .project-stm32  Makefile
002-f107vct6-stime/inc/: config.h
002-f107vct6-stime/src/: main.c
003-f107vct6-console-printf/: Makefile
003-f107vct6-console-printf/inc/: config.h  crystal.h
003-f107vct6-console-printf/src/: main.c
004-f107vct6-stime-delay/inc/: config.h
004-f107vct6-stime-delay/src/: main.c
005-f107vct6-stime-scheduler/inc/: config.h
006-f107vct6-console-cli/: Makefile
006-f107vct6-console-cli/inc/: config.h
006-f107vct6-console-cli/src/: main.c
docker/: Dockerfile  build  env
examples/: README.md  make.sh
examples/001-f107vc-sysclk-led/: Makefile
examples/001-f107vct6-sysclk-led/: Makefile
examples/001-f407zg-sysclk-led/: Makefile
examples/001-f767zi-sysclk-led-gpio/: .clang-format
examples/008-spi/: make.sh
examples/014-pc-uart-comm/pc-program/: .editorconfig  .gitignore  CMakeLists.txt
examples/014-pc-uart-comm/pc-program/comm/: comm.cpp  comm.h  ringbuffer.cpp  ringbuffer.h
examples/014-pc-uart-comm/pc-program/serial/: serial.cpp  serial.h
examples/014-pc-uart-comm/pc-program/serial-comm/: serial-comm.cpp  serial-comm.h
examples/014-pc-uart-comm/pc-program/src/: main.cpp
(+405 files in other folders)
